Fix menu overlap on small screens
Previously, the menu would cover up the button to close the menu on
small screens. As a result, the menu could not be closed.

--- a/source/assets/stylesheets/components/_navigation.scss
+++ b/source/assets/stylesheets/components/_navigation.scss
@@ -105,6 +105,7 @@
     .menu-open &{
       display: flex;
       opacity: 1;
+      justify-content: flex-start
     }
   }
 
